[package]
name = "hub_gaming"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unidecode = "0.3.0"